Mon  Nov 22 2004	H. Wade Minter (minter@lunenburg.org)
     * Fix the logfile routines so that a) logfiles actually work, and
       b) Windows users get logfiles all the time.
     * Clean up command line switches, add --help flag to show usage.
     * Start work on a --debug command line switch to dump tons of debugging
       information to STDOUT.

Wed  Nov 10 2004	H. Wade Minter (minter@lunenburg.org)
     * Deiconify/raise the mainwindow when doing fresh-install stuff, 
       otherwise the app will silently hang.
     * Released version 2.0.2

Sat  Oct  2  2004	H. Wade Minter (minter@lunenburg.org)
     * Nicer output from cpancheck.pl

Sat  Sep 25  2004	H. Wade Minter (minter@lunenburg.org)
     * Fixed a bug that prevented the holding tank from launching playlists.
     * Released Version 2.0.1 with this bugfix.

Fri  Sep 24  2004	H. Wade Minter (minter@lunenburg.org)
     * Finished updating documentation.
     * Released Version 2.0!

Tue  Sep 21  2004	H. Wade Minter (minter@lunenburg.org)
     * Print a status message when we fade-stop.

Sun  Sep 19  2004	H. Wade Minter (minter@lunenburg.org)
     * Use shift() instead of ($scalar) = @_ when we only care about one
       argument.

Sat  Sep 18  2004	H. Wade Minter (minter@lunenburg.org)
     * Add a --config flag to point to an alternate mrvoicerc.
     * Wrap the database SQL import in a transaction for efficency.
     * Replace spurious die() calls with status updates.
     * Add a tool, cpancheck.pl, to check CPAN for updates of the modules
       that Mr. Voice uses.
     * Removed obsolete tools.
     * Make it so that the top item in a search is always selected AND visible.

Fri  Sep 17  2004	H. Wade Minter (minter@lunenburg.org)
     * Get the move_tank function working with the HList.  Thanks to 
       Kyle at sickduck.org for the help.
     * Move the CWX-specific functions to their own branch.
     * Use a white background for the "Invalid" songs, too.